@@ -1,4 +1,9 @@
 
+2022-01-19  Ron Norman <rjn@inglenet.com>
+
+	* tree.c,tree.h: Add cb_list_entry routine, returns Nth entry of a list
+	* codegen.c:	Handle REPORT field with multiple COLUMNS and VALUES
+
 2022-01-17  Ron Norman <rjn@inglenet.com>
 
 	* parser.y: VARYING var FROM exp BY exp partly added
